clean up from testing, move all to final position, ready for a push

--- a/TODO
+++ b/TODO
@@ -2,3 +2,7 @@ remove type constraints from ip type check funcs
 
 use loop construct in places with explicit list for statements
 
+clean up code and pod
+
+
+
