--- a/TODO
+++ b/TODO
@@ -1,18 +1,38 @@
+REQUIREMENTS FOR RELEASE
+------------------------
 
-replace warn and fail with diag?
+export all subs (and test them)
+
+make starting version 1.0.0 (but consider a beta release with ver < 1)
+
+ensure the :auth and :ver adverbs are in place
+
+put base conversion and other utility functions in separate export
+  category: util?
 
 complete two new base conversion functions
 
-for base conversions make sure generated size is okay (pad left with
-  zeroes if necessary)
+for base conversions (except single-character ones) make sure
+  generated size is okay (pad left with zeroes if necessary)
 
 add length capability where warranted (add tests)
 
+add param constraints where appropriate
+  (particularly in utility functions)
+
+change sub comments to pod, ensure all subs are described
+
+put util functions after all default export functions
+
 clean up code and pod
+
+add Makefile target to generate text from pod in the module
 
 ==================================
 DONE:
 ==================================
+
+replace warn and fail with diag? (NO)
 
 finish reverse function; add tests (DONE)
 
