correct ip-reverse sub, update tests for it; update TODO

--- a/TODO
+++ b/TODO
@@ -5,19 +5,12 @@ export all subs (and test them)
 
 make starting version 1.0.0 (but consider a beta release with ver < 1)
 
-separate tests into apprpriate files
+separate tests into appropriate files
 
 ensure the :auth and :ver adverbs are in place
 
 put base conversion and other utility functions in separate export
   category: util
-
-complete two new base conversion functions (DONE)
-
-for base conversions (except single-character ones) make sure
-  generated size is okay (pad left with zeroes if necessary) (DONE)
-
-add length capability where warranted (add tests) (DONE)
 
 add param constraints where appropriate
   (particularly in utility functions)
@@ -33,6 +26,13 @@ add Makefile target to generate text from pod in the module
 ==================================
 DONE:
 ==================================
+
+complete two new base conversion functions (DONE)
+
+for base conversions (except single-character ones) make sure
+  generated size is okay (pad left with zeroes if necessary) (DONE)
+
+add length capability where warranted (add tests) (DONE)
 
 replace warn and fail with diag? (NO)
 
