--- a/TODO
+++ b/TODO
@@ -1,12 +1,18 @@
 REQUIREMENTS FOR RELEASE
 ------------------------
 
+tighten arg type requirements
+
+add return types where appropriate
+
+define and use regex tokens for the oft-used ones such as
+  for: binary, hexadecimal, and ip-version numbers and
+  positive decimal integers
+
 decided: use a README.md for now, all pod in the module able
   to be extracted to pdf (note that README.md takes precedence as
   far as the one used to auto render; all others do render when
   selected
-
-separate tests into appropriate files
 
 change sub comments to pod, ensure all subs are described
 
@@ -17,6 +23,8 @@ add Makefile target to generate text from pod in the module
 ==================================
 DONE:
 ==================================
+
+separate tests into appropriate files (DONE)
 
 put util functions after all default export functions (DONE)
 
