more to do before release

--- a/TODO
+++ b/TODO
@@ -4,6 +4,14 @@ REQUIREMENTS FOR INITIAL RELEASE
 
 ask for comments from #perl6 (pending receipt of comments...)
 
+add ip-reverse-net sub? or part of sub ip-reverse-address?
+
+consider changing to check ip version inside other functions and not
+  requiring ip-version in params; should changes some subs to 
+ export(:util) as a result
+
+create a script and make target to produce the DEFAULT-SUBS.md and
+  UTIL-SUBS.md
 
 ------------------------------------------
 DONE:
