--- a/TODO
+++ b/TODO
@@ -2,25 +2,28 @@
 REQUIREMENTS FOR INITIAL RELEASE
 ===========================================
 
-add ip-reverse-net sub? or part of sub ip-reverse-address? add test
-for it
-
-create a script and make target to produce the DEFAULT-SUBS.md and
-  UTIL-SUBS.md in the ./docs dir
-
-ask for comments from #perl6 (pending receipt of comments...)
+mention md create utility
 
 consider changing to check ip version inside other functions and not
   requiring ip-version in params; should change some subs to
-  export(:util) as a result
+  export(:util) as a result (NOT YET)
 
 consider removing ip- prefix to subs
-
-add suitable tags to META6.json
 
 ------------------------------------------
 DONE:
 ------------------------------------------
+
+create a script and make target to produce the DEFAULT-SUBS.md and
+  UTIL-SUBS.md in the ./docs dir; need line-wrap for long sigs (e.g.,
+  ip-bintoip) (DONE)
+
+add suitable tags to META6.json (DONE)
+
+ask for comments from #perl6 (pending receipt of comments...) (DONE)
+
+add ip-reverse-net sub? or part of sub ip-reverse-address? add test
+for it (DONE)
 
 correct links to sub docs in README.md (DONE)
 
@@ -83,5 +86,7 @@ REQUIREMENTS FOR A FOLLOW-ON RELEASE
 ====================================
 
 add capability to handle CIDR notation
+
+tidy failure messages, use fail consistently
 
 add Makefile target to generate text from pod in the module
